--- a/_posts/2017-09-24-what-is-ai.md
+++ b/_posts/2017-09-24-what-is-ai.md
@@ -1,7 +1,7 @@
 ---
 layout      : post
 title       : What is Artificial Intelligence? (A short story)
-author      : Gaurav Singh
+author      : "Gaurav Singh"
 tags        : 
     - Fiction
     - AI
