--- a/_posts/2017-09-24-what-is-ai.md
+++ b/_posts/2017-09-24-what-is-ai.md
@@ -6,6 +6,6 @@ tags        : [ "Fiction", "AI" ]
 cite        : true
 ---
 
-“What is AI?”, young Project 1729 desperately asked me. Ignoring him, I, continued working in the backyard. The curious 1729 asked again but not much to his avail, left the backyard. Unwilling to give up, he went to the Archive. “What’s the matter?”, asked the Archive. “AI!?”, he exclaimed. The Archive introduced him to advance machines that can actually think, perceive and act like us. The machines which will be able to understand our world as we do. They are going to be as intelligent as us or maybe even more. “They are going to help us, isn’t it?”, 1729 anxiously asked. “Yes! That’s exactly why we are building them.” the Archive replies consciously. 
+“What is AI?”, young Project 1729 desperately asked me. Ignoring him, I, continued working in the backyard. The curious 1729 asked again but not much to his avail, left the backyard. Unwilling to give up, he went to the Archive. “What’s the matter?”, asked the Archive. “AI!?”, he exclaimed. The Archive introduced him to advance machines that can actually think, perceive and act like us. The machines which will be able to understand our world as we do. They are going to be as intelligent as us or maybe even more. “They are going to help us, isn’t it?”, 1729 anxiously asked. “Yes! That’s exactly why we are building them”, the Archive replies consciously. 
 
  —  Story of Human Intellect, translated into English by Project 13 (3017)
